# dinov3-in1k-probes

./: README.md  demo.py  eval_in1k.py  print_metrics.py  push_to_hub.py  pyproject.toml
dinov3_in1k_probes/: __init__.py  dinov3_linear_clf_head.py  repos.py
dinov3_in1k_probes/data/: __init__.py
dinov3_in1k_probes/training/: __main__.py  backbone.py  config.py  dali_loader.py  extract.py  train.py
slurm/: extract.sbatch  train.sbatch
src/dinov3_in1k_probes/: __init__.py  repos.py
src/dinov3_in1k_probes/data/: __init__.py
src/dinov3_in1k_probes/training/: __main__.py  backbone.py  config.py  dali_loader.py  eval.py  extract.py  loss.py  train.py
tests/: test_training.py
