[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dinov3-in1k-probes"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.36.0",
    "numpy>=2.3.4",
    "safetensors>=0.6.2",
    "torch>=2.9.1",
]
license = "MIT"
authors = [{name = "Yohaï-Eliel Berreby", email = "me@yberreby.com"}]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
training = [
    "transformers>=4.50.0",
    "tyro>=0.9.0",
    "tqdm>=4.60.0",
    "optuna>=4.0.0",
    "comet-ml>=3.30.0",
    "nvidia-dali-cuda120; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "cupy-cuda12x; sys_platform == 'linux'",
]
dev = [
    "accelerate>=1.11.0",
    "ipython>=9.7.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "safetensors>=0.6.2",
    "tabulate>=0.9.0",
    "timm>=1.0.22",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "tyro>=0.9.35",
    "yaspin>=3.3.0",
    "basedpyright>=1.37.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "pypatree>=0.4.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = false
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportAttributeAccessIssue = "warning"

[tool.pytest.ini_options]
pythonpath = ["src"]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
nvidia-dali-cuda120 = [{ index = "nvidia" }]
